// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-61"
>
  <label
    className="ms-Label root-62"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-63"
    data-is-focusable={true}
    id="id__11"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-64"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-61"
>
  <label
    className="ms-Label root-62"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-63"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-64"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Punch Card Default 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-69"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col"
    >
      <span
        className="css-69"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-TextField root-72"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <label
              className="ms-Label root-62"
              htmlFor="TextField15"
              id="TextFieldLabel17"
            >
              Hours
            </label>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel17"
                className="ms-TextField-field field-74"
                id="TextField15"
                max={24}
                min={0}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                type="number"
                value="12"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField root-72"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <label
              className="ms-Label root-62"
              htmlFor="TextField18"
              id="TextFieldLabel20"
            >
              Minutes
            </label>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel20"
                className="ms-TextField-field field-74"
                id="TextField18"
                max={59}
                min={0}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                type="number"
                value="32"
              />
            </div>
          </div>
        </div>
        <button
          className="ms-Button ms-Button--primary root-83"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-64"
            data-automationid="splitbuttonprimary"
          >
            <span
              className="ms-Button-textContainer textContainer-65"
            >
              <span
                className="ms-Button-label label-84"
                id="id__21"
              >
                Update
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col"
    >
      <span
        className="css-69"
      >
        <h3>
          Actions
        </h3>
      </span>
      <div
        className="ms-Stack css-85"
      >
        <button
          className="ms-Button ms-Button--primary root-83"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-64"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-37 css-86 ms-Button-icon icon-66"
              data-icon-name="Clock"
              role="presentation"
              style={
                Object {
                  "fontFamily": "\\"FabricMDL2Icons-2\\"",
                }
              }
            >
              
            </i>
            <span
              className="ms-Button-textContainer textContainer-65"
            >
              <span
                className="ms-Button-label label-84"
                id="id__24"
              >
                Add Scheduled Slot
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <span
        className="css-69"
      >
        <h3>
          Punched
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-87"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-89"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone28"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header27-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header27-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header27-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header27-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header27-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header27-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-88"
                  data-focuszone-id="FocusZone29"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone33"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField34"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField37"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone40"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-83"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-136 ms-Button-icon icon-66"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__41"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-137"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-140"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__44"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="css-69"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-87"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-89"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone31"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header30-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header30-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header30-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header30-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header30-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header30-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-88"
                  data-focuszone-id="FocusZone32"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone47"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField48"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField51"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone54"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-83"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-136 ms-Button-icon icon-66"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__55"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-137"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-140"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__58"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-118"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-119"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-121"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-122"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={40}
              className="ms-ProgressIndicator-progressBar progressBar-123"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-118"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-119"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-121"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-122"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-123"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Punch Card With Hook 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-69"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col"
    >
      <span
        className="css-69"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-70"
      >
        <div
          className="ms-TextField root-72"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-61"
            >
              <label
                className="ms-Label root-62"
              >
                Hours
              </label>
              <button
                className="ms-Button ms-Button--icon root-63"
                data-is-focusable={true}
                id="id__64"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-64"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel63"
                className="ms-TextField-field field-74"
                id="TextField61"
                max={24}
                min={0}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                type="number"
                value="00"
              />
            </div>
          </div>
        </div>
        <div
          className="ms-TextField root-72"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-Stack css-61"
            >
              <label
                className="ms-Label root-62"
              >
                Minutes
              </label>
              <button
                className="ms-Button ms-Button--icon root-63"
                data-is-focusable={true}
                id="id__71"
                onClick={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                title="Info"
                type="button"
              >
                <span
                  className="ms-Button-flexContainer flexContainer-64"
                  data-automationid="splitbuttonprimary"
                >
                  <i
                    aria-hidden={true}
                    className="ms-Icon root-37 css-68 ms-Button-icon icon-66"
                    data-icon-name="Info"
                    role="presentation"
                    style={
                      Object {
                        "fontFamily": "\\"FabricMDL2Icons\\"",
                      }
                    }
                  >
                    
                  </i>
                </span>
              </button>
            </div>
            <div
              className="ms-TextField-fieldGroup fieldGroup-73"
            >
              <input
                aria-invalid={false}
                aria-labelledby="TextFieldLabel70"
                className="ms-TextField-field field-74"
                id="TextField68"
                max={59}
                min={0}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                type="number"
                value="00"
              />
            </div>
          </div>
        </div>
        <button
          className="ms-Button ms-Button--primary root-83"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-64"
            data-automationid="splitbuttonprimary"
          >
            <span
              className="ms-Button-textContainer textContainer-65"
            >
              <span
                className="ms-Button-label label-84"
                id="id__75"
              >
                Update
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col"
    >
      <span
        className="css-69"
      >
        <h3>
          Actions
        </h3>
      </span>
      <div
        className="ms-Stack css-85"
      >
        <button
          className="ms-Button ms-Button--primary root-83"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-64"
            data-automationid="splitbuttonprimary"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <span
        className="css-69"
      >
        <h3>
          Punched
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-87"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-89"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone82"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header81-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header81-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header81-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header81-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header81-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header81-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-88"
                  data-focuszone-id="FocusZone83"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone87"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField88"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField91"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone94"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-83"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-136 ms-Button-icon icon-66"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__95"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-137"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-140"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__98"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="css-69"
      >
        <h3>
          Scheduled
        </h3>
      </span>
      <div
        className="ms-Viewport"
        style={
          Object {
            "minHeight": 1,
            "minWidth": 1,
          }
        }
      >
        <div
          className="ms-DetailsList is-horizontalConstrained detailsList-87"
          data-automationid="DetailsList"
          data-is-scrollable="false"
        >
          <div
            aria-colcount={2}
            aria-readonly="true"
            aria-rowcount={3}
            role="grid"
          >
            <div
              className="ms-DetailsList-headerWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-50 ms-DetailsHeader root-89"
                data-automationid="DetailsHeader"
                data-focuszone-id="FocusZone85"
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
                onMouseMove={[Function]}
                role="row"
              >
                <div
                  aria-colindex={1}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-in-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header84-punch-in-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header84-punch-in-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header84-punch-in-time-name"
                      >
                        In Time
                      </span>
                    </span>
                  </span>
                </div>
                <div
                  aria-colindex={2}
                  aria-sort="none"
                  className="ms-DetailsHeader-cell is-actionable root-105"
                  data-automationid="ColumnsHeaderColumn"
                  data-is-draggable={false}
                  data-item-key="punch-out-time"
                  draggable={false}
                  role="columnheader"
                  style={
                    Object {
                      "width": 120,
                    }
                  }
                >
                  <span
                    className="cellTooltip-113"
                  >
                    <span
                      aria-haspopup={false}
                      aria-labelledby="header84-punch-out-time-name"
                      className="ms-DetailsHeader-cellTitle cellTitle-111"
                      data-is-focusable={true}
                      id="header84-punch-out-time"
                      onClick={[Function]}
                      onContextMenu={[Function]}
                    >
                      <span
                        className="ms-DetailsHeader-cellName cellName-112"
                        id="header84-punch-out-time-name"
                      >
                        Out Time
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-DetailsList-contentWrapper"
              onKeyDown={[Function]}
              role="presentation"
            >
              <div
                className="ms-SelectionZone"
                onClick={[Function]}
                onContextMenu={[Function]}
                onDoubleClick={[Function]}
                onFocusCapture={[Function]}
                onKeyDown={[Function]}
                onKeyDownCapture={[Function]}
                onMouseDown={[Function]}
                onMouseDownCapture={[Function]}
                role="presentation"
              >
                <div
                  className="ms-FocusZone css-50 focusZone-88"
                  data-focuszone-id="FocusZone86"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseDownCapture={[Function]}
                >
                  <div
                    className="ms-List"
                    role="presentation"
                  >
                    <div
                      className="ms-List-surface"
                      role="presentation"
                    >
                      <div
                        className="ms-List-page"
                        role="presentation"
                        style={Object {}}
                      >
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={0}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={1}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone101"
                            data-is-focusable={true}
                            data-item-index={0}
                            data-selection-index={0}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField102"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:00"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <div
                                  className="ms-TextField root-135"
                                >
                                  <div
                                    className="ms-TextField-wrapper"
                                  >
                                    <div
                                      className="ms-TextField-fieldGroup fieldGroup-73"
                                    >
                                      <input
                                        aria-invalid={false}
                                        className="ms-TextField-field field-74"
                                        id="TextField105"
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        onInput={[Function]}
                                        type="text"
                                        value="06:40"
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                        <div
                          className="ms-List-cell"
                          data-automationid="ListCell"
                          data-list-index={1}
                          role="presentation"
                        >
                          <div
                            aria-rowindex={2}
                            className="ms-FocusZone css-50 ms-DetailsRow root-125"
                            data-automationid="DetailsRow"
                            data-focuszone-id="FocusZone108"
                            data-is-focusable={true}
                            data-item-index={1}
                            data-selection-index={1}
                            data-selection-touch-invoke={true}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onMouseDownCapture={[Function]}
                            role="row"
                            style={
                              Object {
                                "minWidth": 200,
                              }
                            }
                          >
                            <div
                              className="ms-DetailsRow-fields fields-132"
                              data-automationid="DetailsRowFields"
                              role="presentation"
                            >
                              <div
                                aria-colindex={1}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-in-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  className="ms-Button ms-Button--primary root-83"
                                  data-is-focusable={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Icon root-37 css-136 ms-Button-icon icon-66"
                                      data-icon-name="Leave"
                                      role="presentation"
                                      style={
                                        Object {
                                          "fontFamily": "\\"FabricMDL2Icons-15\\"",
                                        }
                                      }
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__109"
                                      >
                                        Punch In
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                              <div
                                aria-colindex={2}
                                aria-readonly={true}
                                className="test-40 ms-DetailsRow-cell cell-128 cellUnpadded-126"
                                data-automation-key="punch-out-time"
                                data-automationid="DetailsRowCell"
                                role="gridcell"
                                style={
                                  Object {
                                    "width": 120,
                                  }
                                }
                              >
                                <button
                                  aria-disabled={true}
                                  className="ms-Button ms-Button--primary is-disabled root-137"
                                  data-is-focusable={false}
                                  disabled={true}
                                  onClick={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyPress={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseUp={[Function]}
                                  type="button"
                                >
                                  <span
                                    className="ms-Button-flexContainer flexContainer-64"
                                    data-automationid="splitbuttonprimary"
                                  >
                                    <i
                                      aria-hidden={true}
                                      className="ms-Button-icon icon-140"
                                      data-icon-name="Leave"
                                    >
                                      
                                    </i>
                                    <span
                                      className="ms-Button-textContainer textContainer-65"
                                    >
                                      <span
                                        className="ms-Button-label label-84"
                                        id="id__112"
                                      >
                                        Punch Out
                                      </span>
                                    </span>
                                  </span>
                                </button>
                              </div>
                            </div>
                            <span
                              aria-checked={false}
                              className="checkCover-131"
                              data-selection-toggle={true}
                              role="checkbox"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-ProgressIndicator root-118"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-119"
          >
            Punched
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-121"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-122"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={40}
              className="ms-ProgressIndicator-progressBar progressBar-123"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "40%",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        dir="rtl"
      >
        <div
          className="ms-ProgressIndicator root-118"
        >
          <div
            className="ms-ProgressIndicator-itemName itemName-119"
          >
            Scheduled
          </div>
          <div
            className="ms-ProgressIndicator-itemProgress itemProgress-121"
          >
            <div
              className="ms-ProgressIndicator-progressTrack progressTrack-122"
            />
            <div
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={20}
              className="ms-ProgressIndicator-progressBar progressBar-123"
              role="progressbar"
              style={
                Object {
                  "transition": undefined,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Test Pivot Test 1`] = `
<div
  className="ms-Stack css-42"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-50 ms-Pivot root-43"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-51"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-59"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-52"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-47"
          >
            <span
              className="ms-Pivot-text text-48"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-44"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-42"
        >
          <span
            className="css-60"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
